--- a/android/build.gradle
+++ b/android/build.gradle
@@ -64,3 +64,8 @@ android {
         }
     }
 }
+
+dependencies {
+    implementation 'com.google.android.gms:play-services-basement:18.9.0'
+    implementation 'androidx.annotation:annotation-jvm:1.9.1'
+}
